--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body * {
 }
 
 .section-one {
+  background-image: url(assets/items.png);
   text-align: center;
   display: flex;
   margin: 5em;
@@ -39,8 +40,34 @@ body * {
 
 .section-three {
   background-color: black;
+  padding: 10px;
+  justify-content: center;
+
+  img {
+    width: 50%
+  }
+
+  display: flex;
+  margin: 5px;
+  font-style: italic;
+  align-content: flex-end;
+  flex-wrap: wrap;
+
 }
 
-.section-three>.card {
+.card {
   background-color: tan;
+  width: 400px;
+  display: flex;
+  padding: 10px;
+}
+
+.section-four {
+  /*background-image: url(C:\Users\nac09\CodeWorks\Web Funds\Wizbangs Site\Wizbang Site\assets\waterColorStain 2.png); */
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  justify-content: center;
+
+
 }
